# Peripheral

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  idf_component.yml  platformio.ini  sdkconfig  sdkconfig.esp-wrover-kit  sdkconfig.esp-wrover-kit.old  sdkconfig.old
components/: .gitignore  README.md
components/bmv700/: CMakeLists.txt  bmv700.cpp  bmv700.h  test_data.h
components/dht22/: CMakeLists.txt  dht22.c
components/ds1603l/: CMakeLists.txt  DS1603L.cpp  sensor_ds1603l.cpp  sensor_ds1603l.h
components/robusto_sensors/: CMakeLists.txt  Kconfig  robusto_sensors.c  robusto_sensors.h  sensors_def.h
components/robusto_sensors/bmv700/: CMakeLists.txt  Kconfig  bmv700.cpp  bmv700.h  test_data.h
components/robusto_sensors/bmv700/simulate/: simulation_samples.c  simulation_samples.h
components/robusto_sensors/dht22/: CMakeLists.txt  DHT.h  Kconfig  dht22.c  dht22.h  dht_c.c
components/robusto_sensors/ds1603l/: CMakeLists.txt  DS1603L.cpp  DS1603L.h  Kconfig  sensor_ds1603l.cpp  sensor_ds1603l.h
include/: LUT.h  sdp_task.c  sdp_task.h  sensor_task.h
lib/ds1603l/: DS1603L.cpp  sensor_ds1603l.c  sensor_ds1603l.h
main/: CMakeLists.txt  idf_component.yml  main.c  sensor_task.c
secret/: .gitignore
src/: ble_task.c  ble_task.h  main.c  sdp_task.c  sdp_task.h
